# 05-cpp-homework

01/: main.cpp
02/1/: CMakeLists.txt  main.cpp  smart_array.cpp  smart_array.h
02/2/: main.cpp  smart_array.cpp  smart_array.h
03/: .gitignore
03/01/src/: main.cpp
03/02/src/: main.cpp  table.h
03/03/src/: main.cpp  treecount.h
03/1/: CMakeLists.txt
03/1/src/: list.cpp  list.h  main.cpp  test-main.cpp
03/2/: CMakeLists.txt
03/2/src/: list.cpp  list.h  main.cpp  test-main.cpp
04/01/src/: main.cpp
04/02/src/: main.cpp
04/03/src/: main.cpp  vector.h
05/01/src/: main.cpp
05/02/src/: main.cpp
06/01/src/: main.cpp
06/02/src/: main.cpp
07/01/src/: main.cpp
07/02/src/: main.cpp
